--- a/src/openlmis-offline/_offline.scss
+++ b/src/openlmis-offline/_offline.scss
@@ -21,6 +21,6 @@ button.is-offline{
 		content: "\f0e7";
 		font-family: FontAwesome;
 		display: inline-block;
-		padding-right: $space-size/2;
+		@include padding-right($space-size/2);
 	}
 }
