--- a/src/common/_aside.scss
+++ b/src/common/_aside.scss
@@ -8,7 +8,7 @@
     > button.close {
         position: absolute;
         top: 0em;
-        right: 0em;
+        @include right(0em);
     }
 
     dl {
@@ -28,10 +28,10 @@
 
     dd {
         flex: 1 0 auto;
-        padding-right: 1em;
+        @include padding-right(1em);
 
         &:last-child {
-            padding-right: 0;
+            @include padding-right(0);
         }
     }
 }
