--- a/src/common/_base.scss
+++ b/src/common/_base.scss
@@ -21,7 +21,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding-right:0 !important; // this stops adding the padding to body when modal is closed on low resolution screens
+  @include padding-right-important(0);// this stops adding the padding to body when modal is closed on low resolution screens
 }
 
 a {
@@ -43,7 +43,7 @@ ul {
   margin-bottom: 0px; // resetting bootstrap value
 }
 
-@keyframes(fade-in) {
+@keyframes fade-in {
   from {
     transform: scale(0);
   }
@@ -52,7 +52,7 @@ ul {
   }
 }
 
-@keyframes(fade-out) {
+@keyframes fade-out {
   from {
     transform: scale(1);
   }
