--- a/src/common/_icon.mixins.scss
+++ b/src/common/_icon.mixins.scss
@@ -20,9 +20,9 @@
     &::before {
         position: absolute;
         top: 50%;
-        left: 50%;
+        @include left(50%);
         text-indent: 0em;
-        transform: translateX(-50%) translateY(-50%);
+        @include translate-xy(-50%, -50%);
     }
 }
 
@@ -39,6 +39,6 @@
 @mixin button-icon($icon) {
     @include icon($icon);
     &::before {
-        margin-right: 0.5em;
+        @include margin-right(.5em);
     }
 }
