--- a/src/common/_openlmis-toolbar.scss
+++ b/src/common/_openlmis-toolbar.scss
@@ -16,13 +16,13 @@ markup:
 Styleguide 6.0
  */
 
-.openlmis-toolbar {
+ .openlmis-toolbar {
     @extend .button-group;
     background: $shadow;
     display: block;
     bottom: 0;
-    left: 0;
-    right: 0;
+    @include left(0);
+    @include right(0);
     padding: 0.5em;
     position: fixed;
     z-index: 15;
@@ -30,13 +30,12 @@ Styleguide 6.0
 
 .toolbar {
     @extend .button-group;
-    margin-left: 0;
-    margin-right: 0;
+    margin: 0;
 
     h1, h2, h3, h4, h5, h6 {
         padding: 0px;
         & ~ * {
-            margin-left: 0px;
+            @include margin-left(0px);
         }
     }
 
@@ -44,17 +43,17 @@ Styleguide 6.0
         @extend .list-unstyled;
         > * {
             display: block;
-            float: left;
-            margin: 0px;
-            padding-right: 0.5em;
+            @include float(left);
+            margin: 0;
+            @include padding-right(.5em);
             &::after{
                 content: "|";
                 display: inline-block;
-                margin-left: 0.5em;
+                @include margin-left(.5em);
             }
 
             &:last-child{
-                padding-right: 0px;
+                @include padding-right(0px);
                 &::after{
                     content: "";
                 }
