--- a/src/openlmis-file-upload/_file-upload.scss
+++ b/src/openlmis-file-upload/_file-upload.scss
@@ -35,12 +35,12 @@ Styleguide 3.6
     }
 
     button.file {
-        margin-right: 0.5em;
+        @include margin-right(0.5em);
     }
 
     .clear {
         position: absolute;
-        right: 0.5em;
+        @include right(0.5em);
         top: 50%;
         transform: translateY(-50%);
         cursor: pointer;
@@ -65,6 +65,6 @@ Styleguide 3.6
 .openlmis-file-upload.is-invalid {
 
     .clear {
-        right: 2em;
+        @include right(2em);
     }
 }
