--- a/src/openlmis-form/_form-toolbar.scss
+++ b/src/openlmis-form/_form-toolbar.scss
@@ -8,16 +8,16 @@
   min-height: 3.6em;
   z-index: 15;
   .delete-button {
-    margin-left: 0.7em;
+    @include margin-left(0.7em);
     margin-top: 0.7em;
   }
   .save-button {
-    margin-left: 0.7em;
+    @include margin-left(0.7em);
     margin-top: 0.7em;
    }
   .primary-action {
-    float: right;
-    margin-right: 0.7em;
+    @include float(right);
+    @include margin-right(0.7em);
     margin-top: 0.7em;
   }
 }
