--- a/src/openlmis-form/_input-control.scss
+++ b/src/openlmis-form/_input-control.scss
@@ -60,7 +60,7 @@ $form-control-text-color-disabled: $text-color-disabled !default;
 
 	&.is-invalid {
 		box-shadow: inset 0 0 0.5em $brand-danger;
-		padding-right: 2em;
+		@include padding-right(2em);
 
 		&::after {
 			content: "\f06a";
@@ -71,7 +71,7 @@ $form-control-text-color-disabled: $text-color-disabled !default;
 			width: 1em;
 			position: absolute;
 			top: 50%;
-			right: 0.5em;
+			@include right(0.5em);
 			transform: translateY(-50%);
 		}
 
