--- a/src/openlmis-form/_openlmis-datepicker.scss
+++ b/src/openlmis-form/_openlmis-datepicker.scss
@@ -21,7 +21,7 @@ Styleguide 3.5
 	width: 1em;
 	position: absolute;
 	top: 50%;
-	right: 0.5em;
+	@include right(0.5em);
 	transform: translateY(-50%);
 }
 
