--- a/src/openlmis-form/_select-select2.scss
+++ b/src/openlmis-form/_select-select2.scss
@@ -49,12 +49,12 @@
         .select2-selection__clear {
             position: absolute;
             top: 0px;
-            right: 0px;
+            @include right(0px);
         }
         .select2-selection__arrow {
             position: absolute;
             top: 0px;
-            left: 0px;
+            @include left(0px);
         }
     }
 
@@ -158,14 +158,15 @@
             height: 0;
             width: 0;
             position: absolute;
-            left: $font-size * 2;
+            @include left($font-size * 2);
             pointer-events: none;
             border-width: $font-size;
-            margin-left: 0 - $font-size;
+            @include margin-left(0 - $font-size);
         }
         &:before {
             border-width: $font-size + $border-width;
-            margin-left: 0 - ($font-size + $border-width);
+
+            @include margin-left(0 - ($font-size + $border-width));
         }
     }
 
