--- a/src/openlmis-popover/_popover.scss
+++ b/src/openlmis-popover/_popover.scss
@@ -33,7 +33,7 @@ Styleguide 1.5
 	> button.close {
 		position: absolute;
 		top: 0px;
-		right: 0px;
+		@include right(0px);
 	}
 
 	> h3 {
@@ -41,14 +41,14 @@ Styleguide 1.5
 		font-size: 1em;
 		line-height: 1em;
 		padding: $padding-small;
-		padding-right: $padding-large;
+		@include padding-right($padding-large);
 		margin: 0em;
 	}
 
-	> .popover-content{
+	> .popover-content {
 		overflow: hidden;
 		padding: $padding-small;
-		padding-right: $padding-large;
+		@include padding-right($padding-large);
 
 		.select2 {
 			// popover width minus left padding minus right padding
@@ -56,8 +56,8 @@ Styleguide 1.5
 		}
 	}
 
-	> h3 + > .popover-content{
-		padding-right: $padding-small;
+	> h3 > .popover-content {
+		@include padding-right($padding-small);
 
 		.select2 {
 			// popover width minus left padding minus right padding
@@ -66,6 +66,6 @@ Styleguide 1.5
 	}
 }
 
-.has-popover > .show-popover{
+.has-popover > .show-popover {
 	@include icon-only("info-circle");
 }
