--- a/src/openlmis-sort/_openlmis-sort.scss
+++ b/src/openlmis-sort/_openlmis-sort.scss
@@ -40,7 +40,7 @@ Styleguide 2.4
     align-items: center;
 
     > * {
-        float: left;
-        margin-right: 1em;
+        @include float(left);
+        @include margin-right(1em);
     }
 }
