--- a/src/openlmis-table/_table-captions.scss
+++ b/src/openlmis-table/_table-captions.scss
@@ -88,6 +88,7 @@ Styleguide 4.2
   @extend .alert;
   display: table-caption;
   margin: 1em 0em;
+  @include text-align(left);
 
   &.error {
     @extend .alert.is-error;
