--- a/src/openlmis-table/_tr-empty.scss
+++ b/src/openlmis-table/_tr-empty.scss
@@ -4,6 +4,6 @@ td.openlmis-empty-row {
     @include icon("exclamation-circle");
     &:before {
         color: $brand-danger;
-        margin-right: 0.5em;
+        @include margin-right(0.5em);
     }
 }
