Test if the build goes when importing mixins

--- a/src/common/_loading-view.scss
+++ b/src/common/_loading-view.scss
@@ -20,7 +20,7 @@ body.no-js {
     position: absolute;
     top: 50%;
     @include left(50%);
-    @include translate-xy(-50%);
+    @include translate-xy(-50%, -50%);
     font-size: $font-size-extra-large;
     color: $white;
     &::before {
